fix bg image not working with dark reader on firefox

--- a/global.css
+++ b/global.css
@@ -67,9 +67,9 @@ h3 {
    font-size: 1.1em;
 }
 body {
-   background-color: #f5f5f5;
+   background-color: #3b3b3b;
    font-family: Arial, Helvetica, sans-serif;
-   color: #000000;
+   color: #9a9a9a;
    background-image: url(resources/images/pattern.png);
    background-repeat: repeat;
 }
